--- a/kc868-ag.yaml
+++ b/kc868-ag.yaml
@@ -1,6 +1,6 @@
 substitutions:
   name: kc868-ag
-  ac_model: "mitsubishi"  #adjust to match your AC unit!
+  ac_model: "mitsu"  #adjust to match your AC unit!
   room_name: "Living Room AC"  #rename your room name
 
 esphome:
