--- a/kc868-ag.yaml
+++ b/kc868-ag.yaml
@@ -8,7 +8,7 @@ esphome:
   name_add_mac_suffix: true
   
   project:
-    name: kincony.kc868-ag
+    name: salvebrate.kc868-ag
     version: "1"
   
 esp32:
@@ -18,7 +18,7 @@ web_server:
   port: 80
 
 dashboard_import:
-  package_import_url: github://hzkincony/kc868-ag/kc868-ag.yaml@main
+  package_import_url: github://salvebrate/kc868-ag/kc868-ag.yaml@main
 
 # Enable logging
 logger:
